[b]Version 0.5.63 (not released yet)[/b]:

(2007-11-29)
 * Now the cache setting is independent for each type of media. That means
   that you can disable cache for local files (faster startup) while keeping
   a cache for internet streams.
   The following options for the config file have been added: cache_for_files,
   cache_for_streams, cache_for_dvds, cache_for_audiocds and cache_for_vcds
   (the last two untested).
   The section Performance in the preferences dialog has been changed too,
   adding options for cache for files, cache for streams and cache for dvds.
   Note: it's not recommended to set a cache for DVDs, seeking might not work
   properly.

(2007-11-28)
 * Added a new experimental code to disable the screensaver (and monitor
   turning off) on Windows.
 * Deleted the old (ancient) code for subtitle management.
 
(2007-11-27)
 * If mplayer is compiled with gui support, it seems pause may not work 
   properly. I think this is fixed now, by changing the PAUSE command in
   input.conf. Should fix bug #1839110.
 * Now the option Open->VCD is enabled under Windows.

(2007-11-25)
 * A very important changed has been added in this revision. SMPlayer is
   the first mplayer frontend in the world (I guess) which uses the new 
   slave commands sub_vob, sub_demux and sub_file (added a few hours ago in the
   mplayer svn). These commands, at last, allow to accurately select the 
   subtitle track. Now you can mix without problems subtitles from different 
   sources: embedded subtitles (like in mkv or mp4 or dvds) and external 
   subtitles (srt, sub, idx/sub...), and now subtitle selection in mp4 files
   should work again (fixes bug #1806153).
   This possibility requires mplayer svn r25158 or above.
   The following option for the config file has been added: 
   use_new_sub_commands. The possible values are: 0 (false), 1 (true), 
   -1 (autodetect). The default value is -1. Autodetection will use the new